# Aerostat

./: .gitignore  README.md  pyproject.toml
aerostat/: __init__.py  __main__.py  cli.py
aerostat/aws/: Dockerfile  index.html  info.py  lambda.py  predict.py  serverless.yml
aerostat/core/: build.py  checks.py  deploy.py  deployer.py  install.py  installer.py  login.py  loginer.py  utils.py
aerostat/libs/: install.py  interfaces.py  login.py
aerostat/scripts/: setup_windows.ps1
aerostat/static/: index.html  template.xlsm
aerostat/static/python/excel_processor/: excel.py
deployer/: __init__.py  __main__.py  cli.py  interfaces.py  utils.py
deployer/aws/: Dockerfile  template.yaml
deployer/aws/image/: lambda.py
deployer/libs/: build.py  install.py  login.py  setup.py  utils.py
deployer/setup/: windows.ps1
test/: excel.xlsm
tests/: m.pkl
