[tool.poetry]
name = "aerostat"
version = "0.1.0"
description = ""
authors = ["Vincent Yan <vincent.yan@blend360.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.7.0"}
questionary = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
