[tool.poetry]
name = "aerostat-launcher"
version = "0.0.6"
description = "A simple CLI tool to deploy your Machine Learning models to cloud, with a public API to use."
authors = ["Vincent Yan <vincent.yan@blend360.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/vinceyyyyyy/Aerostat"
repository = "https://github.com/vinceyyyyyy/Aerostat"
keywords = ["machine learning deployment", "cloud", "api"]
packages = [
    {include = "aerostat"}
]


[tool.poetry.scripts]
aerostat = 'aerostat.cli:app'


[tool.poetry.dependencies]
python = "^3.10"
typer = { extras = ["all"], version = "^0.7.0" }
questionary = "^1.10.0"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.1.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
